drop --enable-preview. Full java 21 support