@@ -7,5 +7,4 @@
   --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED 
   --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED 
   --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED 
-  --add-opens=java.base/java.net=ALL-UNNAMED 
-  --enable-preview
+  --add-opens=java.base/java.net=ALL-UNNAMED
